--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,15 @@
+:root {
+  --branco: #FFFFFF;
+  --roxo-vivo: #8502BB;
+  --roxo-escuro: #4104A8;
+  --cinza: #858585;
+  --rosa: #F208A4;
+  --azul: #00CAF3;
+}
+
 body {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #252525;
+    background-color: var(--branco);
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -8,17 +17,14 @@ body {
     align-items: center;
   }
   
-  body,
-  a {
-    color: #fafafa;
-  }
-  
   h1 {
     font-size: 2.5rem;
+    color:var(--roxo-vivo);
   }
   
   h2 {
     font-size: 1.5rem;
+    color: var(--cinza);
   }
   
   /* HEADER */
@@ -49,8 +55,8 @@ body {
   
   .links a {
     display: block;
-    color: #252525;
-    background-color: #fafafa;
+    color: var(--branco);
+    background-color: var(--roxo-escuro);
     text-align: center;
     margin: 1rem 0rem 1rem 0rem;
     padding: 1rem 10rem;
@@ -59,8 +65,7 @@ body {
   
   .links a:hover {
     display: block;
-    color: #fafafa;
-    background-color: #4c3a69;
+    background-color: var(--rosa);
     animation: mouseHover 0.5s ease;
   }
   
@@ -84,10 +89,11 @@ body {
   .social li a {
     margin: 0rem 0.5rem;
     padding: 0.5rem;
+    color: var(--azul);
   }
   
   .social li a:hover {
-    color: #4c3a69;
+    color: var(--rosa);
     animation: mouseHover 0.5s ease;
   }
   
